fixed button overlapping issue

--- a/main.css
+++ b/main.css
@@ -399,15 +399,16 @@ footer{
 
 .shadow {
     background-color:#ac8311;
-    width: 25%;
+    margin-top: 4em;
+    margin-left:200px;
+    width: 10% fixed;
     text-align: center;
     color: #ffff;
-    border: none;
     border-radius: 50px;
     padding: 15px 15px;
     font-weight: bold;
     text-transform: uppercase;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
 }
 
 .shadow:hover {
